Fix tests and related bugs